--- a/server/static/style.css
+++ b/server/static/style.css
@@ -24,3 +24,26 @@
   padding-top: 15px;
   border-radius: 15px;
 }
+
+
+#background {
+  /*https://static.pexels.com/photos/390225/pexels-photo-390225.jpeg
+    https://static.pexels.com/photos/1440/city-road-street-buildings.jpg
+    https://static.pexels.com/photos/147469/pexels-photo-147469.jpeg
+    https://static.pexels.com/photos/29732/pexels-photo-29732.jpg
+    https://static.pexels.com/photos/393468/pexels-photo-393468.jpeg
+  */
+  /*
+    mobile
+      https://static.pexels.com/photos/313618/pexels-photo-313618.jpeg
+  */
+  background-image: url(https://static.pexels.com/photos/1440/city-road-street-buildings.jpg);
+    /* Full height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
