--- a/server/static/style.css
+++ b/server/static/style.css
@@ -11,6 +11,15 @@
   padding-top: 15px;
 }
 
+.FieldHome{
+  text-align: center;
+  margin-top: 35%;
+  padding-top: 0px;
+  margin-left: 50px;
+  margin-right: 50px;
+  border-radius:2em;
+}
+
 
 #Field{
   text-align: center;
@@ -26,7 +35,7 @@
 }
 
 
-#background {
+.background {
   /*https://static.pexels.com/photos/390225/pexels-photo-390225.jpeg
     https://static.pexels.com/photos/1440/city-road-street-buildings.jpg
     https://static.pexels.com/photos/147469/pexels-photo-147469.jpeg
